syntax = "proto3";

package infraboard.mpaas.job;
option go_package = "github.com/infraboard/mpaas/apps/job";

import "apps/job/pb/job.proto";
import "github.com/infraboard/mcube/pb/page/page.proto";
import "github.com/infraboard/mcube/pb/resource/base.proto";

// RPC Job定义
service RPC {
    rpc CreateJob(CreateJobRequest) returns(Job);
    rpc QueryJob(QueryJobRequest) returns(JobSet);
    rpc DescribeJob(DescribeJobRequest) returns(Job);
}

message QueryJobRequest {
    // 分页请求
    // @gotags: json:"page"
    infraboard.mcube.page.PageRequest page = 1;
    // 是否是公开Job, 默认只能本空间内访问
	// @gotags: bson:"visiable_mode" json:"visiable_mode"
	optional mcube.resource.VISIABLE_MODE visiable_mode = 2;
    // job 所属域
    // @gotags: json:"domain"
    string domain = 3;
    // job 所属空间
    // @gotags: json:"namespace"
    string namespace = 4;
    // job Id列表
    // @gotags: json:"ids"
    repeated string ids = 5;
    // job 名称列表
    // @gotags: json:"names"
    repeated string names = 6; 
}


enum DESCRIBE_BY {
    // 用户的ID
    ID = 0;
}

message DescribeJobRequest {
    // 查询方式
    // @gotags: json:"describe_by"
    DESCRIBE_BY describe_by = 1;
    // 查询值
    // @gotags: json:"describe_value"  validate:"required"
    string describe_value = 2;
}